修复转化问题